--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +14,7 @@
     "dotenv": "^14.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown-date-2": "^1.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
